--- a/app/src/main/res/layout-sw720dp/activity_a_c_bearbeiten.xml
+++ b/app/src/main/res/layout-sw720dp/activity_a_c_bearbeiten.xml
@@ -34,7 +34,7 @@
         android:text="@string/Aufgabeadd"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="50sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
         android:inputType="textMultiLine"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="50sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
@@ -63,7 +63,7 @@
         android:id="@+id/spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="32dp"
         android:background="#549C9B9B"
         android:textColor="?attr/primaryTitleColor"
         android:textSize="45sp"
@@ -74,12 +74,14 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="791dp"
-        android:layout_height="278dp"
+        android:layout_width="995dp"
+        android:layout_height="96dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
+        android:layout_marginBottom="16dp"
         android:autoSizeTextType="uniform"
         android:gravity="center_horizontal"
         android:text="@string/infoBearbeiten"
@@ -89,9 +91,10 @@
         android:textColorHint="?attr/primaryTitleColor"
         app:layout_constraintBottom_toTopOf="@+id/btn_add"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_Aufgabe"
-        app:layout_constraintVertical_bias="0.35" />
+        app:layout_constraintVertical_bias="0.597" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
