--- a/app/src/main/res/layout-sw720dp/activity_einstellungen.xml
+++ b/app/src/main/res/layout-sw720dp/activity_einstellungen.xml
@@ -22,8 +22,8 @@
 
     <ImageButton
         android:id="@+id/btn_ton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="135dp"
+        android:layout_height="124dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
@@ -33,16 +33,16 @@
         android:src="@drawable/pixel_lautsprecher_an"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.832"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.029"
+        app:layout_constraintVertical_bias="0.154"
         tools:ignore="OnClick" />
 
     <ImageButton
         android:id="@+id/imgbtn_rewardw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="135dp"
+        android:layout_height="124dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="32dp"
@@ -50,50 +50,48 @@
         android:onClick="btn_werbung"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.161"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.031" />
+        app:layout_constraintVertical_bias="0.165" />
 
     <Switch
         android:id="@+id/switch1"
-        android:layout_width="421dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="45dp"
+        android:layout_width="330dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="50dp"
         android:switchMinWidth="55dp"
         android:text="@string/dark"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="50sp"
+        android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/btn_sprache_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.411" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_ton" />
 
     <Switch
         android:id="@+id/switch_Videoanaus"
-        android:layout_width="421dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="340dp"
+        android:layout_height="88dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
         android:switchMinWidth="55dp"
         android:text="@string/switch_video_an"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="50sp"
+        android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/spin_sprache"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch1"
-        app:layout_constraintVertical_bias="0.708" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
         android:id="@+id/spin_sprache"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:background="@android:drawable/divider_horizontal_textfield"
         android:gravity="center"
         android:minWidth="48dp"
@@ -105,18 +103,14 @@
         android:textColor="?attr/primaryTitleColor"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/btn_sprache_save"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1"
-        app:layout_constraintVertical_bias="1.0" />
+        android:visibility="gone"
+        tools:layout_editor_absoluteX="1030dp"
+        tools:layout_editor_absoluteY="680dp" />
 
     <Button
         android:id="@+id/btn_sprache_save"
         android:layout_width="518dp"
         android:layout_height="99dp"
-        android:layout_marginBottom="40dp"
         android:background="@drawable/pixil_button_main"
         android:onClick="btn_sprache_save"
         android:paddingLeft="15dp"
@@ -125,16 +119,14 @@
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
         android:textSize="48sp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:visibility="gone"
+        tools:layout_editor_absoluteX="841dp"
+        tools:layout_editor_absoluteY="751dp" />
 
     <Button
         android:id="@+id/btn_50"
-        android:layout_width="250dp"
-        android:layout_height="110dp"
+        android:layout_width="166dp"
+        android:layout_height="78dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/pixil_button_main"
         android:onClick="btn_ladesammeln"
@@ -142,7 +134,7 @@
         android:text="@string/fuenfzig"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="50sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +153,7 @@
         android:textAlignment="center"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="48sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -180,7 +172,7 @@
         android:textAlignment="center"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="48sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_50" />
