--- a/app/src/main/res/layout-sw720dp/activity_main.xml
+++ b/app/src/main/res/layout-sw720dp/activity_main.xml
@@ -24,8 +24,8 @@
 
     <NumberPicker
         android:id="@+id/numberPicker"
-        android:layout_width="131dp"
-        android:layout_height="155dp"
+        android:layout_width="103dp"
+        android:layout_height="140dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="350dp"
         android:layout_marginRight="350dp"
@@ -34,16 +34,37 @@
         android:textSize="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.811"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
-        app:layout_constraintVertical_bias="0.036" />
+        app:layout_constraintVertical_bias="0.215" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="350dp"
+        android:layout_marginLeft="350dp"
+        android:layout_marginTop="208dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:fontFamily="@font/pixel_art"
+        android:text="@string/anzahlshots"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?attr/primaryTitleColor"
+        android:textColorHint="#000000"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/numberPicker"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />
 
     <Button
         android:id="@+id/btn_add"
-        android:layout_width="320dp"
-        android:layout_height="76dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="216dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="70dp"
         android:layout_marginRight="70dp"
         android:background="@drawable/pixil_button_main"
@@ -53,7 +74,7 @@
         android:text="@string/hinzufuegen"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="@color/mainText"
-        android:textSize="40sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tp_spieler"
@@ -63,14 +84,14 @@
         android:id="@+id/tp_spieler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:fontFamily="@font/pixel_art"
         android:hint="@string/tp_name"
         android:inputType="textPersonName"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="?attr/primaryTitleColor"
-        android:textSize="40sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.24"
@@ -81,7 +102,7 @@
         android:id="@+id/tv_Spieler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/pixel_art"
         android:gravity="center_horizontal"
         android:paddingLeft="20dp"
@@ -91,7 +112,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?attr/primaryTitleColor"
         android:textColorHint="@color/mainText"
-        android:textSize="34sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -100,8 +121,8 @@
 
     <Button
         android:id="@+id/btn_zumSpiel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
@@ -109,39 +130,18 @@
         android:padding="15dp"
         android:text="@string/start"
         android:textColor="?attr/primaryTitleColor"
-        android:textSize="48sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="350dp"
-        android:layout_marginLeft="350dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:fontFamily="@font/pixel_art"
-        android:text="@string/anzahlshots"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="?attr/primaryTitleColor"
-        android:textColorHint="#000000"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/numberPicker"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler" />
-
     <ListView
         android:id="@+id/lv_kategorie"
-        android:layout_width="1000dp"
-        android:layout_height="200dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="996dp"
+        android:layout_height="225dp"
+        android:layout_marginBottom="8dp"
         android:paddingLeft="70dp"
         android:paddingTop="40dp"
         android:paddingRight="70dp"
@@ -152,15 +152,14 @@
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_zumSpiel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cb_kinder"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/numberPicker"
+        app:layout_constraintVertical_bias="0.694" />
 
     <Switch
         android:id="@+id/swch_zufall"
-        android:layout_width="202dp"
-        android:layout_height="63dp"
+        android:layout_width="219dp"
+        android:layout_height="67dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/pixel_art"
@@ -172,30 +171,30 @@
         android:textColorHint="?attr/primaryTitleColor"
         android:textOff="AUS"
         android:textOn="ON"
-        android:textSize="40sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.417"
+        app:layout_constraintHorizontal_bias="0.289"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
-        app:layout_constraintVertical_bias="0.219" />
+        app:layout_constraintVertical_bias="0.212" />
 
     <CheckBox
         android:id="@+id/cb_kinder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="350dp"
-        android:layout_marginLeft="350dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="12dp"
         android:minHeight="48dp"
         android:text="@string/rundenbasis"
-        android:textSize="40sp"
+        android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintHorizontal_bias="0.139"
+        app:layout_constraintStart_toEndOf="@+id/zufall_info"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
+        app:layout_constraintVertical_bias="0.308" />
 
     <EditText
         android:id="@+id/etn_sucht"
@@ -203,47 +202,45 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="350dp"
-        android:layout_marginRight="350dp"
         android:ems="10"
         android:inputType="numberSigned"
         android:minHeight="48dp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.037"
         app:layout_constraintStart_toEndOf="@+id/cb_kinder"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
+        app:layout_constraintVertical_bias="0.386" />
 
     <ImageButton
         android:id="@+id/rundenbasis_info"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:background="@drawable/pixil_button_main"
         android:onClick="btn_info_rundenbasis"
         android:scaleType="fitCenter"
         android:src="@drawable/pixel_info"
         android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.356"
+        app:layout_constraintHorizontal_bias="0.237"
         app:layout_constraintStart_toEndOf="@+id/cb_kinder"
-        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
+        app:layout_constraintVertical_bias="0.394" />
 
     <ImageButton
         android:id="@+id/zufall_info"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:background="@drawable/pixil_button_main"
         android:onClick="btn_info_zufall"
         android:scaleType="fitCenter"
         android:src="@drawable/pixel_info"
         app:layout_constraintBottom_toBottomOf="@+id/numberPicker"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.139"
         app:layout_constraintStart_toEndOf="@+id/swch_zufall"
         app:layout_constraintTop_toBottomOf="@+id/tv_Spieler"
-        app:layout_constraintVertical_bias="0.175" />
+        app:layout_constraintVertical_bias="0.168" />
 </androidx.constraintlayout.widget.ConstraintLayout>
