--- a/app/src/main/res/layout-sw720dp/activity_sucht.xml
+++ b/app/src/main/res/layout-sw720dp/activity_sucht.xml
@@ -21,31 +21,33 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="944dp"
-        android:layout_height="200dp"
+        android:layout_width="675dp"
+        android:layout_height="99dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/pixel_art"
         android:gravity="center_horizontal"
         android:text="@string/suechtig"
         android:textAlignment="center"
         android:textColor="?attr/primaryTitleColor"
-        android:textSize="72sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_sucht"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.513" />
+        app:layout_constraintVertical_bias="0.414" />
 
     <Button
         android:id="@+id/btn_sucht"
-        android:layout_width="723dp"
-        android:layout_height="192dp"
+        android:layout_width="508dp"
+        android:layout_height="134dp"
         android:layout_marginBottom="88dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
         android:onClick="btn_kennWebseite"
         android:text="@string/kenndeinLimit"
         android:textColor="?attr/primaryTitleColor"
-        android:textSize="60sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_suchtberatung"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
@@ -53,15 +55,15 @@
 
     <Button
         android:id="@+id/btn_suchtberatung"
-        android:layout_width="723dp"
-        android:layout_height="192dp"
+        android:layout_width="508dp"
+        android:layout_height="134dp"
         android:layout_marginBottom="84dp"
         android:background="@drawable/pixil_button_main"
         android:fontFamily="@font/pixel_art"
         android:onClick="btn_anrufsucht"
         android:text="@string/anrufen"
         android:textColor="?attr/primaryTitleColor"
-        android:textSize="60sp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
